# splitje-be

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  tasks.md
classic/: Cargo.toml
classic/migrations/: 2_users.sql  3_groups.sql  4_user_groups.sql  5_transactions.sql  6_ledgers.sql
classic/src/dto/: group.rs  mod.rs
classic/src/http/: error.rs  extractor.rs  mod.rs  types.rs  users.rs
classic/src/logic/: mod.rs
migrations/: 2_users.sql  4_user_groups.sql
scripts/: connect-local-db.sh
splitje/: Cargo.toml
splitje/config/: development.yaml  test.yaml
splitje/examples/: playground.rs
splitje/tests/models/: users.rs
splitje/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
splitje/tests/tasks/: seed.rs
src/: lib.rs  main.rs
src/commons/: mod.rs
src/dto/: group.rs  user.rs
src/http/: error.rs  extractor.rs  groups.rs  mod.rs  transactions.rs  users.rs
src/logic/: group.rs  ledger.rs
