[package]
name = "sharoomies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6", features = ["tower-log"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "macros"] }
http = { version = "0.2.9" }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.4.4", features = ["derive", "env"] }

serde = { version = "1.0.130", features = ["derive"] }

# State of the art password hashing.
argon2 = "0.5.2"

# Axum builds on the types in Tower
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }

jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.8"

time = "0.2"

uuid = { version = "0.8", features = ["serde"] }

# Utility Crates
anyhow = "1.0.48"
async-trait = "0.1.51"
dotenv = "0.15.0"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
